Add team twitter bios

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -1,30 +1,40 @@
 - name: Tom Goodman
   role: Founder / Lead Organiser
   picture: /images/team/TomGoodman.jpg
+  twitter: TauOmicronMu
 - name: Liam Sorta
   role: Founder / Delight Lead
   picture: /images/team/LiamSorta.jpg
+  twitter: LiamSorta
 - name: Cat Dunicliff
   role: Founder / Safeguarding Lead
   picture: /images/team/CatDunicliff.jpg
+  twitter: Meowter_space
 - name: Helena Bower
   role: Publicity Lead
   picture: /images/team/HelenaBower.jpg
+  twitter: bowerhe
 - name: Hugh Wells
   role: Infrastructure
   picture: /images/team/HughWells.jpg
+  twitter: CrabLabuk
 - name: Jon Kingsley
   role: Stage Manager / Networking Lead
   picture: /images/team/JonKingsley.jpg
+  twitter: JFKingsley
 - name: Will Russell
   role: AV Lead
   picture: /images/team/WillRussell.jpg
+  twitter: wrussell1999
 - name: Charlie de Freitas
   role: Web Lead
   picture: /images/team/CharliedeFreitas.jpg
+  twitter: chasbob97
 - name: Justin Chadwell
   role: CTF Lead / Webmaster
   picture: /images/team/JustinChadwell.jpg
+  twitter: jedevc
 - name: Likkan Chung
   role: Publicity Officer
   picture: /images/team/LikkanChung.jpg
+  twitter: LikkanChung
