--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -19,7 +19,7 @@
   picture: /images/team/HughWells.jpg
   twitter: CrabLabuk
 - name: Jon Kingsley
-  role: Stage Manager / Networking Lead
+  role: Stage Manager / Co-Networking Lead
   picture: /images/team/JonKingsley.jpg
   twitter: JFKingsley
 - name: Will Russell
@@ -38,3 +38,6 @@
   role: Publicity Officer
   picture: /images/team/LikkanChung.jpg
   twitter: LikkanChung
+- name: Fraser Wade
+  role: Co-Networking Lead
+  picture: /images/team/FraserWade.jpg
