Social mobility foundation logo added

--- a/_data/sponsors.yaml
+++ b/_data/sponsors.yaml
@@ -37,3 +37,6 @@ partners:
   - name: Levitation Events
     link: https://levitationevents.co.uk/
     logo: ./images/sponsors/levitation-events.png
+  - name: Social Mobility Foundation
+    link: http://www.socialmobility.org.uk/
+    logo: ./images/sponsors/smf.png
