Updated Hugh's role

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -15,7 +15,7 @@
   picture: /images/team/HelenaBower.jpg
   twitter: bowerhe
 - name: Hugh Wells
-  role: Infrastructure
+  role: PCB Designer
   picture: /images/team/HughWells.jpg
   twitter: CrabLabuk
 - name: Jon Kingsley
