--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -7,7 +7,7 @@
   picture: /images/team/LiamSorta.jpg
   twitter: LiamSorta
 - name: Cat Dunicliff
-  role: Founder / Safeguarding Lead
+  role: Safeguarding Lead
   picture: /images/team/CatDunicliff.jpg
   twitter: Meowter_space
 - name: Helena Bower
