Added Arkwright as a Partner

--- a/_data/sponsors.yaml
+++ b/_data/sponsors.yaml
@@ -46,3 +46,6 @@ partners:
   - name: Levitation Events
     link: https://levitationevents.co.uk/
     logo: ./images/sponsors/levitation-events.png
+  - name: Arkwright Engineering Scholarships
+    link: http://www.arkwright.org.uk/
+    logo: ./images/sponsors/arkwright.png
