--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -23,7 +23,7 @@
   picture: /images/team/JonKingsley.jpg
   twitter: JFKingsley
 - name: Will Russell
-  role: AV Lead
+  role: Outreach / AV Lead
   picture: /images/team/WillRussell.jpg
   twitter: wrussell1999
 - name: Charlie de Freitas
