Update Jon's role

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -19,7 +19,7 @@
   picture: /images/team/HughWells.jpg
   twitter: CrabLabuk
 - name: Jon Kingsley
-  role: Stage Manager / Co-Networking Lead
+  role: Stage Manager / Infrastructure Lead
   picture: /images/team/JonKingsley.jpg
   twitter: JFKingsley
 - name: Will Russell
