Added SMF to partners

--- a/_data/sponsors.yaml
+++ b/_data/sponsors.yaml
@@ -67,3 +67,6 @@ partners:
   - name: Fusion
     link: https://www.meetup.com/Fusion-Technology-Meetup-Birmingham/
     logo: ./images/sponsors/fusion.png
+  - name: Social Mobility Foundation
+    link: https://https://www.socialmobility.org.uk/
+    logo: ./images/sponsors/smf.png
