--- a/_data/sponsors.yaml
+++ b/_data/sponsors.yaml
@@ -68,5 +68,5 @@ partners:
     link: https://www.meetup.com/Fusion-Technology-Meetup-Birmingham/
     logo: ./images/sponsors/fusion.png
   - name: Social Mobility Foundation
-    link: https://https://www.socialmobility.org.uk/
+    link: https://www.socialmobility.org.uk/
     logo: ./images/sponsors/smf.png
