--- a/_data/sponsors.yaml
+++ b/_data/sponsors.yaml
@@ -56,7 +56,7 @@ partners:
     link: https://www.cs.bham.ac.uk/
     logo: ./images/sponsors/socs.png
   - name: Sticker Mule
-    link: https://www.stickermule.com/
+    link: http://hackp.ac/mlh-stickermule-hackathons
     logo: ./images/sponsors/stickermule.svg
   - name: Balsamiq
     link: https://balsamiq.com/
