Update safeguarding team

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -6,10 +6,6 @@
   role: Founder / Delight Lead
   picture: /images/team/LiamSorta.jpg
   twitter: LiamSorta
-- name: Cat Dunicliff
-  role: Safeguarding Lead
-  picture: /images/team/CatDunicliff.jpg
-  twitter: Meowter_space
 - name: Helena Bower
   role: Publicity Lead
   picture: /images/team/HelenaBower.jpg
@@ -39,5 +35,5 @@
   picture: /images/team/LikkanChung.jpg
   twitter: LikkanChung
 - name: Fraser Wade
-  role: Co-Networking Lead
+  role: Networking Lead
   picture: /images/team/FraserWade.jpg
