Add Daniel Spencer to website

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -37,3 +37,6 @@
 - name: Fraser Wade
   role: Networking Lead
   picture: /images/team/FraserWade.jpg
+- name: Daniel Spencer
+  role: AV Technician
+  picture: /images/team/DanielSpencer.jpg
