--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -52,7 +52,7 @@
   twitter: LikkanChung
 - name: Jon Freer
   title: Stream God
-  role: Steam Content / Production
+  role: Stream Content / Production
   picture: /images/team/jon.jpg
 - name: Hugh Wells
   title: King Crab
