Gave Helena her proper title oops x

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -10,7 +10,7 @@
   twitter: LiamSorta
 - name: Helena Bower
   title: The True HTM Overlord
-  role: Publicity Lead
+  role: COO / Publicity Lead
   picture: /images/team/HelenaBower.jpg
   twitter: bowerhe
 - name: Charlie de Freitas
